--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+
+
+
+.heading {
+  @apply text-slate-200 font-bold text-6xl text-center
+}
+
+
 .card {
   width: 200px;
   height: 310px;
@@ -38,6 +46,8 @@ body {
 .card:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
 }
+
+
 
 .occasion__seats,
 .occasion__seats--taken {
@@ -71,6 +81,10 @@ body {
 .occasion__seats--taken {
   background-color: rgba(34, 64, 109, 0.7);
 }
+
+
+
+
 
 
 .main {
